--- a/3000-auth/package.json
+++ b/3000-auth/package.json
@@ -21,15 +21,12 @@
   "author": "Jurong",
   "license": "ISC",
   "dependencies": {
-    "@noqclinic/common": "^1.0.2",
-    "@types/cookie-session": "^2.0.49",
-    "@types/express": "^4.17.21",
-    "cookie-session": "^2.1.0",
-    "express": "^4.19.2",
+    "@noqclinic/common": "^1.0.13",
     "express-async-errors": "^3.1.1",
     "mongoose": "^8.3.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "mongoose-update-if-current": "^1.4.0",
+    "node-nats-streaming": "^0.3.2",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
