--- a/4000-chat/package.json
+++ b/4000-chat/package.json
@@ -21,11 +21,12 @@
   "author": "Rohan",
   "license": "ISC",
   "dependencies": {
-    "@noqclinic/common": "^1.0.8",
+    "@noqclinic/common": "^1.0.13",
     "express-async-errors": "^3.1.1",
     "mongoose": "^8.3.2",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "redis": "^4.6.13",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
